--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -1,8 +1,36 @@
-.main .mobile-header-span {
+.main3 .main-span3, .main2 .main-span2, .main1 .main-span1 {
   color: red;
   text-shadow: 0 0 10px red;
   font-family: monospace;
-  font-size: 23px;
+  font-size: 40px;
+}
+
+.main3, .main2, .main1 {
+  border: 1px solid gray;
+  box-shadow: 0 0 5px gray;
+  border-radius: 10px;
+  background-color: rgba(17, 17, 17, 0.5);
+  backdrop-filter: blur(2px);
+}
+
+.main3 .main-span3, .main2 .main-span2, .mobile-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  background: linear-gradient(90deg, rgb(75, 75, 255), rgb(31, 31, 255));
+  width: 300px;
+  height: 36px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  color: rgb(211, 211, 211);
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 body {
@@ -16,8 +44,6 @@ body {
 
 .mobile-header {
   position: fixed;
-  display: flex;
-  justify-content: center;
   top: 0px;
   width: 100%;
   height: 90px;
@@ -28,23 +54,44 @@ body {
 }
 .mobile-header h1 {
   position: absolute;
-  top: 10%;
+  top: -10px;
+  font-size: 35px;
 }
 
-.main {
+.main1 {
   position: relative;
   height: max-content;
+  font-size: 20px;
   top: 90px;
   margin: auto 10px;
-  border: 1px solid gray;
-  box-shadow: 0 0 5px gray;
-  border-radius: 10px;
-  background-color: rgba(17, 17, 17, 0.5);
-  backdrop-filter: blur(2px);
   color: rgb(211, 211, 211);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+}
+.main2 {
+  position: relative;
+  height: max-content;
+  top: 140px;
+  font-size: 25px;
+  margin: auto 0px auto 50px;
+  padding: 10px;
+  color: rgb(211, 211, 211);
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-right: none;
+}
+.main3 {
+  position: relative;
+  height: max-content;
+  top: 190px;
+  font-size: 25px;
+  margin: auto 50px auto 0px;
+  padding: 10px;
+  color: rgb(211, 211, 211);
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-left: none;
+}
+button {
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=style.css.map */
