--- a/docs/style.css
+++ b/docs/style.css
@@ -34,8 +34,8 @@ button {
 
 body {
   margin: 0;
-  background-image: url(/img/background.jpg);
-  background-size: 500% 100%;
+  background-image: url("background.jpg");
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
