--- a/docs/style.scss
+++ b/docs/style.scss
@@ -31,9 +31,9 @@ $main-text-color:rgb(211, 211, 211);
 }
 
 body{margin: 0;
-    background-image: url(/img/background.jpg);
-    background-size:500% 100%;
-    background-position: center;
+    background-image: url("background.jpg");
+    background-size:cover;
+    background-position: center center;
     background-repeat: no-repeat;
     background-attachment:fixed;
 }
