--- a/Pages/AboutUsPage/style.scss
+++ b/Pages/AboutUsPage/style.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
 }
-$main-color-text:rgb(255, 255, 255);
+$main-text-color:rgb(211, 211, 211);
 %blured-frame{
     border:1px solid gray;
     box-shadow: 0 0 5px gray;
@@ -11,28 +11,21 @@ $main-color-text:rgb(255, 255, 255);
     background-color: rgba(17, 17, 17, 0.5);
     backdrop-filter: blur(2px);
 }
-%btn-style{
-    background:linear-gradient(90deg, rgb(75, 75, 255), rgb(31, 31, 255));
-    width:150px;
-    height:36px;
-    border:none;
-    border-radius: 4px;
-    color:$main-color-text;
-    font-size:20px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+%highlighted-text-color{
+    color: red;
+    text-shadow: 0 0 10px red;
+    font-family:monospace;
+    font-size:40px;
 }
 
 // Верхня "Шторка"
 .mobile-header{position: fixed;
     @extend %flex-display;
     top: 0px;
-    left:0px;
     width: 100%;
     height: 90px;
     font-size:10px;
-    color: $main-color-text;
+    color: $main-text-color;
     z-index: 2;
     background: linear-gradient(
         to bottom,
@@ -46,10 +39,9 @@ $main-color-text:rgb(255, 255, 255);
         rgba(14,14,14,0.3) 95%,
         rgba(14,14,14,0) 100%
     );
-h1{position: relative;
+h1{position: absolute;
     top:-10px;
-    left:30px;
-    font-size:25px;
+    font-size:35px;
 }
 }
 
@@ -61,73 +53,43 @@ body{margin: 0;
     background-attachment:fixed;
 }
 
-.main{
-    @extend %blured-frame;
+.main1{
     position: relative;
-    top:120px;
-    margin:auto 30px;
-    height:580px;
-    color:$main-color-text;
-    font-size:30px;
+    top:110px;
+    margin:auto 10px;
+    @extend %blured-frame;
+    color:$main-text-color;
+    font-size:20px;
+.main-h1{
+    @extend %highlighted-text-color;
     @extend %flex-display;
-.l-name{
-    position: absolute;
-    top:35px;
-    left:150px;
-}
-.l-email{
-    position: absolute;
-    top:150px;
-    left:140px;
-}
-.i-name{position: absolute;
-    top:90px;
-    left:70px
-}
-.i-email{position: absolute;
-    top:200px;
-    left:70px;
-}
-textarea{height:160px;
-    width:210px;
-    position: absolute;
-    top:310px;
-    left:70px;
-    background-color: rgb(17,17,17);
-    border:none;
-    color:$main-color-text;
-    font-size: 20px;
-}
-textarea::placeholder{
-    color:$main-color-text;
-    font-size: 15px;
-}
-.textarea{position: absolute;
-    top:260px;
-    left:67px;
-}
-input{
-    display: flex;
-    align-content: center;
-    height: 28px;
-    width:210px;
-    background: none;
-    border: 1px solid rgb(255, 0, 0);
-    border-top:none;
-    border-right:none;
-    border-left:none;
-    color:$main-color-text;
-    font-size: 18px;
-}
-input:focus{
-    outline: none;
 }
 }
 
-button{
-    @extend %btn-style;
-    position: absolute;
-    top:510px;
+.main2{
+    position: relative;
+    top:150px;
+    margin:auto 10px;
+    @extend %blured-frame;
+    color:$main-text-color;
+    font-size:20px;
+.main-h2{
+    @extend %highlighted-text-color;
+    @extend %flex-display;
+}
+}
+
+.main3{
+    position: relative;
+    top:190px;
+    margin:auto 10px;
+    @extend %blured-frame;
+    color:$main-text-color;
+    font-size:20px;
+.main-h3{
+    @extend %highlighted-text-color;
+    @extend %flex-display;
+}
 }
 
 // Бургер-меню
@@ -144,7 +106,7 @@ button{
   background:linear-gradient(90deg, rgb(255, 21, 21), rgb(255, 121, 31));
   transition: 0.3s;
   position: relative;
-  left:72px;
+  left:160px;
   top:-4px;
 }
 
@@ -163,13 +125,13 @@ button{
   transition: right 0.3s ease;
   z-index: 1;
   top:35px;
-  font-size:23px;
-  overflow-x: auto;  
+  font-size:23px;  
+  overflow: auto;
 }
 
 .side-menu a{
     text-decoration: none;
-    color: $main-color-text;
+    color: $main-text-color;
 }
 
 .side-menu.active {
