--- a/Pages/ContactsPage/style.css
+++ b/Pages/ContactsPage/style.css
@@ -23,8 +23,10 @@ body {
   z-index: 2;
   background: linear-gradient(to bottom, rgb(14, 14, 14) 0%, rgb(14, 14, 14) 70%, rgba(14, 14, 14, 0.8) 80%, rgba(14, 14, 14, 0.7) 83%, rgba(14, 14, 14, 0.6) 86%, rgba(14, 14, 14, 0.5) 89%, rgba(14, 14, 14, 0.4) 92%, rgba(14, 14, 14, 0.3) 95%, rgba(14, 14, 14, 0) 100%);
 }
-
-h1 {
+.mobile-header h1 {
+  position: absolute;
+  top: -10px;
+  font-size: 35px;
   color: rgb(255, 255, 255);
   margin: 0;
   position: relative;
