--- a/docs/Pages/AboutUsPage/style.css
+++ b/docs/Pages/AboutUsPage/style.css
@@ -1,10 +1,10 @@
-.main, .mobile-header {
+.main3 .main-h3, .main2 .main-h2, .main1 .main-h1, .mobile-header {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.main {
+.main3, .main2, .main1 {
   border: 1px solid gray;
   box-shadow: 0 0 5px gray;
   border-radius: 10px;
@@ -12,116 +12,59 @@
   backdrop-filter: blur(2px);
 }
 
-button {
-  background: linear-gradient(90deg, rgb(75, 75, 255), rgb(31, 31, 255));
-  width: 150px;
-  height: 36px;
-  border: none;
-  border-radius: 4px;
-  color: rgb(255, 255, 255);
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.main3 .main-h3, .main2 .main-h2, .main1 .main-h1 {
+  color: red;
+  text-shadow: 0 0 10px red;
+  font-family: monospace;
+  font-size: 40px;
 }
 
 .mobile-header {
   position: fixed;
   top: 0px;
-  left: 0px;
   width: 100%;
   height: 90px;
   font-size: 10px;
-  color: rgb(255, 255, 255);
+  color: rgb(211, 211, 211);
   z-index: 2;
   background: linear-gradient(to bottom, rgb(14, 14, 14) 0%, rgb(14, 14, 14) 70%, rgba(14, 14, 14, 0.8) 80%, rgba(14, 14, 14, 0.7) 83%, rgba(14, 14, 14, 0.6) 86%, rgba(14, 14, 14, 0.5) 89%, rgba(14, 14, 14, 0.4) 92%, rgba(14, 14, 14, 0.3) 95%, rgba(14, 14, 14, 0) 100%);
 }
 .mobile-header h1 {
-  position: relative;
+  position: absolute;
   top: -10px;
-  left: 30px;
-  font-size: 25px;
+  font-size: 35px;
 }
 
 body {
   margin: 0;
-  background-image: url("/img/background.jpg");
+  background-image: url("background.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
-.main {
+.main1 {
   position: relative;
-  top: 120px;
-  margin: auto 30px;
-  height: 580px;
-  color: rgb(255, 255, 255);
-  font-size: 30px;
-}
-.main .l-name {
-  position: absolute;
-  top: 35px;
-  left: 150px;
-}
-.main .l-email {
-  position: absolute;
-  top: 150px;
-  left: 140px;
-}
-.main .i-name {
-  position: absolute;
-  top: 90px;
-  left: 70px;
-}
-.main .i-email {
-  position: absolute;
-  top: 200px;
-  left: 70px;
-}
-.main textarea {
-  height: 160px;
-  width: 210px;
-  position: absolute;
-  top: 310px;
-  left: 70px;
-  background-color: rgb(17, 17, 17);
-  border: none;
-  color: rgb(255, 255, 255);
+  top: 110px;
+  margin: auto 10px;
+  color: rgb(211, 211, 211);
   font-size: 20px;
 }
-.main textarea::placeholder {
-  color: rgb(255, 255, 255);
-  font-size: 15px;
+.main2 {
+  position: relative;
+  top: 150px;
+  margin: auto 10px;
+  color: rgb(211, 211, 211);
+  font-size: 20px;
 }
-.main .textarea {
-  position: absolute;
-  top: 260px;
-  left: 67px;
+.main3 {
+  position: relative;
+  top: 190px;
+  margin: auto 10px;
+  color: rgb(211, 211, 211);
+  font-size: 20px;
 }
-.main input {
-  display: flex;
-  align-content: center;
-  height: 28px;
-  width: 210px;
-  background: none;
-  border: 1px solid rgb(255, 0, 0);
-  border-top: none;
-  border-right: none;
-  border-left: none;
-  color: rgb(255, 255, 255);
-  font-size: 18px;
-}
-.main input:focus {
-  outline: none;
-}
-
-button {
-  position: absolute;
-  top: 510px;
-}
-
 .burger-menu {
   display: flex;
   flex-direction: column;
@@ -135,7 +78,7 @@ button {
   background: linear-gradient(90deg, rgb(255, 21, 21), rgb(255, 121, 31));
   transition: 0.3s;
   position: relative;
-  left: 72px;
+  left: 160px;
   top: -4px;
 }
 
@@ -155,12 +98,12 @@ button {
   z-index: 1;
   top: 35px;
   font-size: 23px;
-  overflow-x: auto;
+  overflow: auto;
 }
 
 .side-menu a {
   text-decoration: none;
-  color: rgb(255, 255, 255);
+  color: rgb(211, 211, 211);
 }
 
 .side-menu.active {
