--- a/docs/Pages/ContactsPage/style.css
+++ b/docs/Pages/ContactsPage/style.css
@@ -1,11 +1,4 @@
-.discord, .telegram, .tiktok {
-  border-top: 1px solid red;
-  border-bottom: 1px solid red;
-  background-color: rgb(17, 17, 17);
-  box-shadow: 0 0 5px rgb(124, 0, 0);
-}
-
-.mobile-header {
+.circle, a, .mobile-header {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,19 +11,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: inherit;
-  backdrop-filter: blur(2px);
-  filter: blur(2px);
-  z-index: -1;
 }
 
 .mobile-header {
@@ -47,36 +27,35 @@ body::before {
   position: absolute;
   top: -10px;
   font-size: 35px;
-}
-
-.discord, .telegram, .tiktok {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 20px;
-  height: 170px;
-  font-size: 25px;
-  text-shadow: 0 0 10px;
-  margin: auto auto 50px;
-}
-
-.discord a, .telegram a, .tiktok a {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  gap: 15px;
-  text-decoration: none;
   color: rgb(255, 255, 255);
+  margin: 0;
+  position: relative;
+  top: -8px;
+  font-size: 35px;
+  left: 20px;
 }
 
-.discord nav, .telegram nav, .tiktok nav {
-  position: relative;
-  left: 100px;
+.a-top {
+  margin-top: 120px;
+}
+
+.a-bottom {
+  margin-bottom: 10%;
 }
 
 img {
-  height: 90px;
-  width: 90px;
+  width: 80px;
+  height: 80px;
+}
+
+.circle {
+  background-color: rgb(17, 17, 17);
+  border: 1px solid red;
+  box-shadow: 0 0 15px red;
+  border-radius: 50%;
+  width: 150px;
+  height: 150px;
+  margin: 30px;
 }
 
 .burger-menu {
@@ -92,7 +71,7 @@ img {
   background: linear-gradient(90deg, rgb(255, 21, 21), rgb(255, 121, 31));
   transition: 0.3s;
   position: relative;
-  left: 160px;
+  left: 72px;
   top: -4px;
 }
 
@@ -112,6 +91,7 @@ img {
   z-index: 1;
   top: 35px;
   font-size: 23px;
+  overflow-x: auto;
 }
 
 .side-menu a {
@@ -130,10 +110,6 @@ hr {
 
 .a3 {
   margin-left: 38px;
-}
-
-.discord {
-  margin-top: 140px;
 }
 
 /*# sourceMappingURL=style.css.map */
