--- a/docs/Pages/NewsPage/style.css
+++ b/docs/Pages/NewsPage/style.css
@@ -1,10 +1,11 @@
-.main3 .main-h3, .main2 .main-h2, .main1 .main-h1, .mobile-header {
+.main h3, .blur-frame h3, .mobile-header h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
-.main3, .main2, .main1 {
+.blur-frame {
   border: 1px solid gray;
   box-shadow: 0 0 5px gray;
   border-radius: 10px;
@@ -12,11 +13,20 @@
   backdrop-filter: blur(2px);
 }
 
-.main3 .main-h3, .main2 .main-h2, .main1 .main-h1 {
+.blur-frame h3 {
   color: red;
   text-shadow: 0 0 10px red;
   font-family: monospace;
   font-size: 40px;
+}
+
+body {
+  margin: 0;
+  background-image: url(/img/background.jpg);
+  background-size: 500% 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .mobile-header {
@@ -30,47 +40,20 @@
   background: linear-gradient(to bottom, rgb(14, 14, 14) 0%, rgb(14, 14, 14) 70%, rgba(14, 14, 14, 0.8) 80%, rgba(14, 14, 14, 0.7) 83%, rgba(14, 14, 14, 0.6) 86%, rgba(14, 14, 14, 0.5) 89%, rgba(14, 14, 14, 0.4) 92%, rgba(14, 14, 14, 0.3) 95%, rgba(14, 14, 14, 0) 100%);
 }
 .mobile-header h1 {
-  position: absolute;
-  top: -10px;
-  font-size: 35px;
-}
-
-body {
+  position: relative;
+  top: 21px;
+  font-size: 27px;
   margin: 0;
-  background-image: url("/img/background.jpg");
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
-.main1 {
-  position: relative;
-  top: 110px;
-  margin: auto 10px;
-  color: rgb(211, 211, 211);
-  font-size: 20px;
-}
-.main2 {
-  position: relative;
-  top: 150px;
-  margin: auto 10px;
-  color: rgb(211, 211, 211);
-  font-size: 20px;
-}
-.main3 {
-  position: relative;
-  top: 190px;
-  margin: auto 10px;
-  color: rgb(211, 211, 211);
-  font-size: 20px;
-  margin-bottom: 55%;
-}
 .burger-menu {
   display: flex;
   flex-direction: column;
   gap: 5px;
   cursor: pointer;
+  position: relative;
+  left: 352px;
+  top: -7px;
 }
 
 .burger-menu div {
@@ -78,9 +61,6 @@ body {
   height: 4px;
   background: linear-gradient(90deg, rgb(255, 21, 21), rgb(255, 121, 31));
   transition: 0.3s;
-  position: relative;
-  left: 160px;
-  top: -4px;
 }
 
 .side-menu {
@@ -99,6 +79,7 @@ body {
   z-index: 1;
   top: 35px;
   font-size: 23px;
+  overflow: auto;
 }
 
 .side-menu a {
@@ -115,8 +96,36 @@ hr {
   color: rgb(158, 0, 0);
 }
 
-.a3 {
-  margin-left: 38px;
+.blur-frame {
+  height: max-content;
+  margin: 0 20px;
+  position: relative;
+  top: 120px;
+}
+.blur-frame h3 {
+  font-size: 25px;
+}
+.blur-frame p {
+  color: rgb(211, 211, 211);
+  margin: auto 10px 10px 10px;
+}
+
+.main {
+  background-color: rgb(17, 17, 17);
+  border-top: 1px solid red;
+  box-shadow: 0 0 10px red;
+  height: max-content;
+  position: relative;
+  top: 170px;
+  color: rgb(211, 211, 211);
+  text-shadow: 0 0 3px rgb(174, 72, 0);
+}
+.main h3 {
+  font-size: 20px;
+}
+.main p {
+  text-shadow: none;
+  margin: auto 10px 20px;
 }
 
 /*# sourceMappingURL=style.css.map */
