--- a/docs/Pages/NewsPage/style.scss
+++ b/docs/Pages/NewsPage/style.scss
@@ -2,8 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
+
 $main-text-color:rgb(211, 211, 211);
+
 %blured-frame{
     border:1px solid gray;
     box-shadow: 0 0 5px gray;
@@ -11,6 +14,7 @@ $main-text-color:rgb(211, 211, 211);
     background-color: rgba(17, 17, 17, 0.5);
     backdrop-filter: blur(2px);
 }
+
 %highlighted-text-color{
     color: red;
     text-shadow: 0 0 10px red;
@@ -18,9 +22,16 @@ $main-text-color:rgb(211, 211, 211);
     font-size:40px;
 }
 
+body{margin: 0;
+    background-image: url(/img/background.jpg);
+    background-size:500% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+}
+
 // Верхня "Шторка"
 .mobile-header{position: fixed;
-    @extend %flex-display;
     top: 0px;
     width: 100%;
     height: 90px;
@@ -39,56 +50,11 @@ $main-text-color:rgb(211, 211, 211);
         rgba(14,14,14,0.3) 95%,
         rgba(14,14,14,0) 100%
     );
-h1{position: absolute;
-    top:-10px;
-    font-size:35px;
-}
-}
-
-body{margin: 0;
-    background-image: url("/img/background.jpg");
-    background-size:cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment:fixed;
-}
-
-.main1{
+h1{@extend %flex-display;
     position: relative;
-    top:110px;
-    margin:auto 10px;
-    @extend %blured-frame;
-    color:$main-text-color;
-    font-size:20px;
-.main-h1{
-    @extend %highlighted-text-color;
-    @extend %flex-display;
-}
-}
-
-.main2{
-    position: relative;
-    top:150px;
-    margin:auto 10px;
-    @extend %blured-frame;
-    color:$main-text-color;
-    font-size:20px;
-.main-h2{
-    @extend %highlighted-text-color;
-    @extend %flex-display;
-}
-}
-
-.main3{
-    position: relative;
-    top:190px;
-    margin:auto 10px;
-    @extend %blured-frame;
-    color:$main-text-color;
-    font-size:20px;
-.main-h3{
-    @extend %highlighted-text-color;
-    @extend %flex-display;
+    top:21px;
+    font-size: 27px;
+    margin:0;
 }
 }
 
@@ -98,6 +64,9 @@ body{margin: 0;
   flex-direction: column;
   gap: 5px;
   cursor: pointer;
+  position: relative;
+  left:352px;
+  top:-7px;
 }
 
 .burger-menu div{
@@ -105,9 +74,6 @@ body{margin: 0;
   height: 4px;
   background:linear-gradient(90deg, rgb(255, 21, 21), rgb(255, 121, 31));
   transition: 0.3s;
-  position: relative;
-  left:160px;
-  top:-4px;
 }
 
 .side-menu {
@@ -125,7 +91,8 @@ body{margin: 0;
   transition: right 0.3s ease;
   z-index: 1;
   top:35px;
-  font-size:23px;  
+  font-size:23px;
+  overflow: auto;  
 }
 
 .side-menu a{
@@ -141,4 +108,38 @@ hr{width:100%;
     color:rgb(158, 0, 0);
 }
 
-.a3{margin-left: 38px;}
+.blur-frame{
+    @extend %blured-frame;
+    height:max-content;
+    margin:0 20px;
+    position: relative;
+    top:120px;
+& h3{
+    @extend %highlighted-text-color;
+    @extend %flex-display;
+    font-size:25px
+}
+& p{
+    color:$main-text-color;
+    margin:auto 10px 10px 10px;
+}
+}
+
+.main{
+    background-color: rgba(17, 17, 17);
+    border-top: 1px solid red;
+    box-shadow: 0 0 10px red;
+    height:max-content;
+    position: relative;
+    top:170px;
+    color:$main-text-color;
+    text-shadow: 0 0 3px rgb(174, 72, 0);
+& h3{
+    @extend %flex-display;
+    font-size: 20px;
+}
+& p{
+    text-shadow: none;
+    margin:auto 10px 20px;
+}
+}
