--- a/docs/style.css
+++ b/docs/style.css
@@ -36,7 +36,7 @@ body {
   margin: 0;
   background-image: url("background.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
@@ -121,11 +121,12 @@ button {
   flex-direction: column;
   align-items: center;
   padding: 58px 10px;
-  gap: 22px;
+  gap: 7px;
   transition: right 0.3s ease;
   z-index: 1;
   top: 50px;
   font-size: 23px;
+  overflow: auto;
 }
 
 .side-menu a {
