--- a/docs/Pages/ReportPage/style.scss
+++ b/docs/Pages/ReportPage/style.scss
@@ -54,7 +54,7 @@ h1{position: relative;
 }
 
 body{margin: 0;
-    background-image: url("/img/background.jpg");
+    background-image: url("background.jpg");
     background-size:cover;
     background-position: center center;
     background-repeat: no-repeat;
