--- a/docs/Pages/ComunityPage/style.scss
+++ b/docs/Pages/ComunityPage/style.scss
@@ -12,7 +12,7 @@ $main-text-color: rgb(255, 255, 255);
 }
 
 body{margin: 0;
-    background-image: url(/img/background.jpg);
+    background-image: url("background.jpg");
     background-size:500% 100%;
     background-position: center;
     background-repeat: no-repeat;
