--- a/docs/Pages/InfoPage/style.css
+++ b/docs/Pages/InfoPage/style.css
@@ -7,7 +7,7 @@
 
 body {
   margin: 0;
-  background-image: url(/img/background.jpg);
+  background-image: url("background.jpg");
   background-size: 500% 100%;
   background-position: center;
   background-repeat: no-repeat;
