--- a/docs/Pages/InfoPage/style.scss
+++ b/docs/Pages/InfoPage/style.scss
@@ -13,7 +13,7 @@ $main-text-color: rgb(255, 255, 255);
 $margin-frame: 120px auto 50px auto;
 
 body{margin: 0;
-    background-image: url(/img/background.jpg);
+    background-image: url("background.jpg");
     background-size:500% 100%;
     background-position: center;
     background-repeat: no-repeat;
