--- a/docs/Pages/NewsPage/style.scss
+++ b/docs/Pages/NewsPage/style.scss
@@ -23,7 +23,7 @@ $main-text-color:rgb(211, 211, 211);
 }
 
 body{margin: 0;
-    background-image: url(/img/background.jpg);
+    background-image: url("background.jpg");
     background-size:500% 100%;
     background-position: center;
     background-repeat: no-repeat;
