--- a/docs/Pages/ReportPage/style.css
+++ b/docs/Pages/ReportPage/style.css
@@ -45,7 +45,7 @@ button {
 
 body {
   margin: 0;
-  background-image: url("/img/background.jpg");
+  background-image: url("background.jpg");
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
